src/objects/DRDW_Assign_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Area__c</fullName>
        <label>Activity Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Title__c</fullName>
        <label>Activity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_End_Date__c</fullName>
        <label>Allocation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Start_Date__c</fullName>
        <label>Allocation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRDW_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Activity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>DRDW_Capability__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Request Activity</value>
            </filterItems>
            <filterItems>
                <field>DRDW_Capability__c.DRDW_Request__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>ERL</value>
            </filterItems>
            <filterItems>
                <field>DRDW_Capability__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Study Activity</value>
            </filterItems>
            <filterItems>
                <field>DRDW_Capability__c.DRDW_Request__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>GO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DRDW_Capability__c</referenceTo>
        <relationshipLabel>DRDW Assign Resources</relationshipLabel>
        <relationshipName>DRDW_Assign_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRDW_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Event</label>
        <referenceTo>DRDW_Event__c</referenceTo>
        <relationshipLabel>DRDW Assign Resources</relationshipLabel>
        <relationshipName>DRDW_Assign_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRDW_Resources__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Resource</label>
        <referenceTo>DRDW_Resource__c</referenceTo>
        <relationshipLabel>DRDW Assign Resources</relationshipLabel>
        <relationshipName>DRDW_Assign_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency_UI__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency Backend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Sub_Activities__c</fullName>
        <label>GO Sub-Activities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Animal Care</fullName>
                </value>
                <value>
                    <fullName>FD Laboratory</fullName>
                </value>
                <value>
                    <fullName>FD Study Management</fullName>
                </value>
                <value>
                    <fullName>FD Veterinary Support</fullName>
                </value>
                <value>
                    <fullName>Study Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Per_Day__c</fullName>
        <label>Hours Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Task__c</fullName>
        <label>Other Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bacterial Isolation</fullName>
                </value>
                <value>
                    <fullName>Binder/Documentation Prep</fullName>
                </value>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Challenge Material Propagation</fullName>
                </value>
                <value>
                    <fullName>Challenge Prep</fullName>
                </value>
                <value>
                    <fullName>Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Enrichment</fullName>
                </value>
                <value>
                    <fullName>Equipment Maintenance</fullName>
                </value>
                <value>
                    <fullName>Growth Study</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Husbandry and/or Handling</fullName>
                </value>
                <value>
                    <fullName>Inventory Management</fullName>
                </value>
                <value>
                    <fullName>Necropsy</fullName>
                </value>
                <value>
                    <fullName>Observations</fullName>
                </value>
                <value>
                    <fullName>Ordering</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>Place Animals</fullName>
                </value>
                <value>
                    <fullName>Protocol Review</fullName>
                </value>
                <value>
                    <fullName>Reagent Preparation</fullName>
                </value>
                <value>
                    <fullName>Sample Collection</fullName>
                </value>
                <value>
                    <fullName>Sample Shipment</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Serological Assays</fullName>
                </value>
                <value>
                    <fullName>Set Up</fullName>
                </value>
                <value>
                    <fullName>Socialization</fullName>
                </value>
                <value>
                    <fullName>Tear Down</fullName>
                </value>
                <value>
                    <fullName>Temps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRDW Assign Resource</label>
    <nameField>
        <displayFormat>AssRes-{0000}</displayFormat>
        <label>DRDW Assign Res</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Assign Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>